2009-12-06  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	Faster polynomial multiplication.
	* src/algebra/poly.spad.pamphlet: Faster polynomial
	multiplication.

2009-12-05  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/transsolve.spad.pamphlet: testZero?(): Accept
	more solutions.

2009-12-04  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/vecrec.spad.pamphlet: More scalable
	rational reconstruction.

2009-12-04  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/interp/trace.boot, src/interp/i-analy.boot,
	src/interp/buildom.boot, src/interp/i-coerce.boot,
	src/interp/parse.boot, src/interp/i-output.boot,
	src/interp/i-spec2.boot, src/interp/g-cndata.boot,
	src/interp/setq.lisp, src/interp/i-funsel.boot,
	src/interp/i-eval.boot, src/interp/br-con.boot,
	src/interp/i-spec1.boot, src/interp/clammed.boot:
	Replace 'Domain' by 'Type' and 'Subdomain(Domain)'
	by 'Category'.

2009-11-29  Martin Rubey  <martin.rubey@univie.ac.at>, bertfried fauser

	* INSTALL (Prerequisities): add libraries for LaTeXed output in
	emacs mode

2009-11-28  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/mantepse.spad.pamphlet: Faster check
	for guessPRec.


2009-11-28  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	Improve guessing with allDegrees.
	* src/algebra/mantepse.spad.pamphlet,
	src/algebra/modhpsol.spad.pamphlet,
	src/input/mantepse.input.pamphlet: Allow missing
	coefficients (degree -1) when guessing with allDegrees.

2009-11-28  Bill Page  <bill.page@newsynthesis.org>

	* src/algebra/op.spad.pamphlet,
	src/algebra/poly.spad.pamphlet, src/algebra/Makefile.in:
	Add 'Comparable' to XPOLY and Tensor domains.

2009-11-28  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	More efficient coercion.
	* src/algebra/multpoly.spad.pamphlet: New helper package.
	src/algebra/multpoly.spad.pamphlet: Use it.
	src/algebra/boo-pack2.input, 
	src/algebra/Makefile.in: Adjust.

2009-11-27  Waldek Hebisch  <hebisch@math.uni.wroc.pl>