@@ -464,39 +464,39 @@ DoubleFloat(): Join(FloatingPointSystem, DifferentialRing, OpenMath,
      x >= 0 => message(FORMAT(NIL$Lisp,format,x)$Lisp pretend String)
      - (message(FORMAT(NIL$Lisp,format,-x)$Lisp pretend String))
    convert(x:%):InputForm == convert(x pretend DoubleFloat)$InputForm
-   x < y            == (x<y)$Lisp
-   - x              == (-x)$Lisp
-   x + y            == (x+y)$Lisp
-   x:% - y:%        == (x-y)$Lisp
-   x:% * y:%        == (x*y)$Lisp
-   i:Integer * x:%  == (i*x)$Lisp
-   max(x,y)         == MAX(x,y)$Lisp
-   min(x,y)         == MIN(x,y)$Lisp
-   x = y            == (x=y)$Lisp
-   x:% / i:Integer  == (x/i)$Lisp
-   sqrt x           == checkComplex SQRT(x)$Lisp
+   x < y            == LESS_-DF(x, y)$Lisp
+   - x              == MINUS_-DF(x)$Lisp
+   x + y            == ADD_-DF(x, y)$Lisp
+   x:% - y:%        == SUB_-DF(x, y)$Lisp
+   x:% * y:%        == MUL_-DF(x, y)$Lisp
+   i:Integer * x:%  == MUL_-DF_-I(x, i)$Lisp
+   max(x,y)         == MAX_-DF(x,y)$Lisp
+   min(x,y)         == MIN_-DF(x,y)$Lisp
+   x = y            == EQL_-DF(x, y)$Lisp
+   x:% / i:Integer  == DIV_-DF_-I(x, i)$Lisp
+   sqrt x           == checkComplex SQRT_-DF(x)$Lisp
    log10 x          == checkComplex LOG10(x)$Lisp
-   x:% ^ i:Integer == EXPT(x,i)$Lisp
-   x:% ^ y:%       == checkComplex EXPT(x,y)$Lisp
+   x:% ^ i:Integer == EXPT_-DF_-I(x,i)$Lisp
+   x:% ^ y:%       == checkComplex EXPT_-DF_-DF(x,y)$Lisp
    coerce(i:Integer):% == FLOAT(i,MOST_-POSITIVE_-DOUBLE_-FLOAT$Lisp)$Lisp
-   exp x            == EXP(x)$Lisp
-   log x            == checkComplex LOG(x)$Lisp
+   exp x            == EXP_-DF(x)$Lisp
+   log x            == checkComplex LOG_-DF(x)$Lisp
    log2 x           == checkComplex LOG2(x)$Lisp
-   sin x            == SIN(x)$Lisp
-   cos x            == COS(x)$Lisp
-   tan x            == TAN(x)$Lisp
+   sin x            == SIN_-DF(x)$Lisp
+   cos x            == COS_-DF(x)$Lisp
+   tan x            == TAN_-DF(x)$Lisp
    cot x            == COT(x)$Lisp
    sec x            == SEC(x)$Lisp
    csc x            == CSC(x)$Lisp
    asin x           == checkComplex ASIN(x)$Lisp -- can be complex
    acos x           == checkComplex ACOS(x)$Lisp -- can be complex
-   atan x           == ATAN(x)$Lisp
+   atan x           == ATAN_-DF(x)$Lisp
    acsc x           == checkComplex ACSC(x)$Lisp
    acot x           == ACOT(x)$Lisp
    asec x           == checkComplex ASEC(x)$Lisp
-   sinh x           == SINH(x)$Lisp
-   cosh x           == COSH(x)$Lisp
-   tanh x           == TANH(x)$Lisp
+   sinh x           == SINH_-DF(x)$Lisp
+   cosh x           == COSH_-DF(x)$Lisp
+   tanh x           == TANH_-DF(x)$Lisp
    csch x           == CSCH(x)$Lisp
    coth x           == COTH(x)$Lisp
    sech x           == SECH(x)$Lisp
@@ -506,9 +506,9 @@ DoubleFloat(): Join(FloatingPointSystem, DifferentialRing, OpenMath,
    acsch x          == ACSCH(x)$Lisp
    acoth x          == checkComplex ACOTH(x)$Lisp
    asech x          == checkComplex ASECH(x)$Lisp
-   x:% / y:%        == (x/y)$Lisp
-   negative? x      == MINUSP(x)$Lisp
-   zero? x          == ZEROP(x)$Lisp
+   x:% / y:%        == DIV_-DF(x, y)$Lisp
+   negative? x      == MINUSP_-DF(x)$Lisp
+   zero? x          == ZEROP_-DF(x)$Lisp
    hash x           == HASHEQ(x)$Lisp
    recip(x)         == (zero? x => "failed"; 1 / x)
    differentiate x  == 0
