@@ -103,3 +103,45 @@
 
 (defmacro QMODDOT32 (v1 v2 ind1 ind2 kk s0 p)
      `(QMODDOT0 ELT32 ,v1 ,v2 ,ind1 ,ind2 ,kk ,s0 ,p))
+
+;;; Floating point macros
+
+(defmacro DEF-DF-BINOP (name op) 
+   `(defmacro ,name (x y) `(the double-float (,',op (the double-float ,x)
+                                                    (the double-float ,y)))))
+(DEF-DF-BINOP ADD-DF +)
+(DEF-DF-BINOP MUL-DF *)
+(DEF-DF-BINOP MAX-DF MAX)
+(DEF-DF-BINOP MIN-DF MIN)
+(DEF-DF-BINOP SUB-DF -)
+(DEF-DF-BINOP DIV-DF /)
+
+(defmacro LESS-DF (x y) `(< (the double-float ,x)
+                                             (the double-float ,y)))
+(defmacro EQL-DF (x y) `(EQL (the double-float ,x)
+                                             (the double-float ,y)))
+(defmacro EXPT-DF-I (x y) `(EXPT (the double-float ,x)
+                                 (the integer ,y)))
+(defmacro EXPT-DF-DF (x y) `(EXPT (the double-float ,x) 
+                                  (the double-float ,y)))
+(defmacro MUL-DF-I (x y) `(* (the double-float ,x)
+                                  (the integer ,y)))
+(defmacro DIV-DF-I (x y) `(/ (the double-float ,x)
+                                  (the integer ,y)))
+(defmacro ZEROP-DF (x) `(ZEROP (the double-float ,x)))
+(defmacro MINUSP-DF (x) `(MINUSP (the double-float ,x)))
+(defmacro SQRT-DF(x) `(SQRT (the double-float ,x)))
+(defmacro LOG-DF (x) `(LOG (the double-float ,x)))
+
+(defmacro DEF-DF-UNOP (name op)
+    `(defmacro ,name (x) `(the double-float (,',op (the double-float ,x)))))
+
+(DEF-DF-UNOP EXP-DF EXP)
+(DEF-DF-UNOP MINUS-DF -)
+(DEF-DF-UNOP SIN-DF SIN)
+(DEF-DF-UNOP COS-DF COS)
+(DEF-DF-UNOP TAN-DF TAN)
+(DEF-DF-UNOP ATAN-DF ATAN)
+(DEF-DF-UNOP SINH-DF SINH)
+(DEF-DF-UNOP COSH-DF COSH)
+(DEF-DF-UNOP TANH-DF TANH)
