@@ -1,3 +1,8 @@
+2009-12-09  Waldek Hebisch  <hebisch@math.uni.wroc.pl>
+
+	* src/algebra/sf.spad.pamphlet, src/interp/primitives.lisp:
+	Faster DoubleFloat computations.
+
 2009-12-06  Waldek Hebisch  <hebisch@math.uni.wroc.pl>
 
 	Faster polynomial multiplication.
